[package]
name = "lotemp"
version = "1.1.0"
edition = "2021"
readme = "README.md"
rust-version = "1.90.0"
homepage = "https://stenstromen.se"
repository = "https://github.com/stenstromen/lotemp"
description = "Fetch Current Local Outside Temperature In the Terminal"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.12.1"

[dev-dependencies]
tempfile = "3.24"
temp-env = "0.3.6"
